fix: hide zoom buttons on mobile for iframe topics using css

--- a/src/components/TrafimageMaps/TrafimageMaps.scss
+++ b/src/components/TrafimageMaps/TrafimageMaps.scss
@@ -437,7 +437,7 @@
   }
 
   /* Topic spezifische css */
-  &.ch-sbb-directverbindungen-iframe {
+  &.ch-sbb-direktverbindungen-iframe {
   &.ch-sbb-geltungsbereiche-iframe {
     &.tm-w-xs .wkp-map-controls {
       display:none;
